--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -37,7 +37,7 @@
           </section>
           <section class="pelicula-descripcion">
             <p class="descripcion">
-              <span class="span-titulo">Romper el circulo (HBO): </span>Blake
+              <span class="span-titulo">Romper el circulo: </span>Blake
               Lively estelariza esta adaptación de la novela de Colleen Hoover
               sobre amor, resiliencia y la fortaleza que requiere romper ciclos.
             </p>
