--- a/main.html
+++ b/main.html
@@ -3,12 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/242/287/png-transparent-hbo-logo-black.png">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/headerYFooter.css">
 </head>
 <body>
-    <a href="index.html">login</a>
-    <a href="recuperar-contraseña.html">recuperar contraseña</a>
-    <a href="register.html">registrarse</a>
+    <header class="header">
+        <h1 class="header-nav">Inicio</h1>
+        <a href="peliculas.html">
+        <img src="images/hulk_hero.png" alt="Hero image" class="hero-img">
+        </a>
+    </header>
+    <main>
+        <nav class="nav">
+            <li class="dropdown-container">
+                <a class="dropdown-link">
+                    Seleccionar categoria
+                    <img src="images/arrow.png" alt="Arrow" class="arrow">
+                </a>
+                <div class="dropdown-content">
+                    <a class="sub-link" href="peliculas.html">Peliculas</a>
+                    <a class="sub-link" href="series.html">Series</a>
+                    <a class="sub-link" href="main.html">Ninguna</a>
+            </li>    
+            <li class="search-container">
+                <input class="search" type="search" placeholder="Buscar por nombre">
+                <img src="images/search.png" alt="Buscar" class="search-icon">
+            </li>
+        </nav>
+        <h2 class="h2-destacados">Destacados</h2>
+        <section class="content">
+            <a href="peliculas.html">
+                <img src="images/hulk_movie.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="series.html">
+                <img src="images/the-office_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="peliculas.html">
+                <img src="images/shaolin-soccer_movie.png" alt="Pelicula" class="img">
+            </a>
+            <a href="series.html">
+                <img src="images/death-note_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="peliculas.html">
+                <img src="images/bad-boys_movie.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="series.html">
+                <img src="images/squid-game_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="peliculas.html">
+                <img src="images/baila-vini_movie.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="series.html">
+                <img src="images/breaking-bad_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="peliculas.html">
+                <img src="images/supercool_movie.png" alt="Pelicula" class="img">
+            </a>
+            <a href="series.html">
+                <img src="images/eternauta_series.jpg" alt="Pelicula" class="img">
+            </a>
+        </section>
+    </main>
+    <footer>
+        ESPACIO RESERVADO PARA EL FOOTER
+    </footer>
 </body>
 </html>
