--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -21,7 +21,7 @@
                 <h1>Restablece tu contraseña</h1>
             </section>
             <section class="h3-desc">
-                <p>Ingresa la direccion de correo electronico que usas para Max, y te
+                <p>Ingresa la direccion de correo electronico que usas, y te
                     enviaremos un enlace para reestablecer la contraseña.
                 </p>
             </section>
