--- a/register.html
+++ b/register.html
@@ -12,10 +12,11 @@
         href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/a5fd7bc83c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/headerYFooter.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!-- Aca solamente va el logo. -->
     </header>
 
