home filtrado por peliculas o series

--- a/series.html
+++ b/series.html
@@ -3,15 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Series</title>
+    <title>Inicio</title>
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/headerYFooter.css">
 </head>
 <body>
-    <header>
-        <a href="index.html"><img src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
+    <header class="header">
+        <h1 class="header-nav">Inicio</h1>
+        <a href="peliculas.html">
+        <img src="images/hulk_hero.png" alt="Hero image" class="hero-img">
+        </a>
     </header>
     <main>
+        <nav class="nav">
+            <li class="dropdown-container">
+                <a class="dropdown-link">
+                    Seleccionar categoria
+                    <img src="images/arrow.png" alt="Arrow" class="arrow">
+                </a>
+                <div class="dropdown-content">
+                    <a class="sub-link" href="peliculas.html">Peliculas</a>
+                    <a class="sub-link" href="series.html">Series</a>
+                    <a class="sub-link" href="main.html">Ninguna</a>
+            </li>    
+            <li class="search-container">
+                <input class="search" type="search" placeholder="Buscar por nombre">
+                <img src="images/search.png" alt="Buscar" class="search-icon">
+            </li>
+        </nav>
+        <h2 class="h2-destacados">Destacados</h2>
+        <section class="content">
+            <a href="info-series.html">
+                <img src="images/the-office_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="info-series.html">
+                <img src="images/death-note_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="info-series.html">
+                <img src="images/squid-game_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="info-series.html">
+                <img src="images/breaking-bad_series.jpg" alt="Pelicula" class="img">
+            </a>
+            <a href="info-series.html">
+                <img src="images/eternauta_series.jpg" alt="Pelicula" class="img">
+            </a>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        ESPACIO RESERVADO PARA EL FOOTER
+    </footer>
 </body>
 </html>
