main, peliculas y series responsive

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximumscale=1">
     <title>Inicio</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/headerYFooter.css">
@@ -18,7 +18,7 @@
         <nav class="nav">
             <li class="dropdown-container">
                 <a class="dropdown-link">
-                    Seleccionar categoria
+                    <p class="p">Seleccionar categoria</p>
                     <img src="images/arrow.png" alt="Arrow" class="arrow">
                 </a>
                 <div class="dropdown-content">
@@ -33,34 +33,34 @@
         </nav>
         <h2 class="h2-destacados">Destacados</h2>
         <section class="content">
-            <a href="peliculas.html">
+            <a href="info-pelicula.html">
                 <img src="images/hulk_movie.jpg" alt="Pelicula" class="img">
             </a>
-            <a href="series.html">
+            <a href="info-series.html">
                 <img src="images/the-office_series.jpg" alt="Pelicula" class="img">
             </a>
-            <a href="peliculas.html">
+            <a href="info-pelicula.html">
                 <img src="images/shaolin-soccer_movie.png" alt="Pelicula" class="img">
             </a>
-            <a href="series.html">
+            <a href="info-series.html">
                 <img src="images/death-note_series.jpg" alt="Pelicula" class="img">
             </a>
-            <a href="peliculas.html">
+            <a href="info-pelicula.html">
                 <img src="images/bad-boys_movie.jpg" alt="Pelicula" class="img">
             </a>
-            <a href="series.html">
+            <a href="info-series.html">
                 <img src="images/squid-game_series.jpg" alt="Pelicula" class="img">
             </a>
-            <a href="peliculas.html">
+            <a href="info-pelicula.html">
                 <img src="images/baila-vini_movie.jpg" alt="Pelicula" class="img">
             </a>
-            <a href="series.html">
+            <a href="info-series.html">
                 <img src="images/breaking-bad_series.jpg" alt="Pelicula" class="img">
             </a>
-            <a href="peliculas.html">
+            <a href="info-pelicula.html">
                 <img src="images/supercool_movie.png" alt="Pelicula" class="img">
             </a>
-            <a href="series.html">
+            <a href="info-series.html">
                 <img src="images/eternauta_series.jpg" alt="Pelicula" class="img">
             </a>
         </section>
