--- a/peliculas.html
+++ b/peliculas.html
@@ -33,7 +33,7 @@
         </nav>
         <h2 class="h2-destacados">Destacados</h2>
         <section class="content">
-            <a href="peliculas.html">
+            <a href="info-pelicula.html">
                 <img src="images/hulk_movie.jpg" alt="Pelicula" class="img">
             </a>
             <a href="info-pelicula.html">
