--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Registrarse</title>
     <link rel="stylesheet" href="./styles/register.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,11 @@
         href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/a5fd7bc83c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/headerYFooter.css">
+    <!-- <link rel="stylesheet" href="./styles/headerYFooter.css"> -->
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <!-- Aca solamente va el logo. -->
     </header>
 
