--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -13,12 +13,16 @@
     />
   </head>
   <body>
-    <header>
-      <a href="index.html"
-        ><img
-          src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp"
-          alt="HBO LOGO"
-      /></a>
+    <header class="header">
+        <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
+        <nav>
+            <ul>
+            <li>HOME</li>
+            <li>PELÍCULAS</li>
+            <li>SERIES</li>
+            <li>PERFIL</li>
+        </ul>
+        </nav>
     </header>
 
     <section class="pelicula-hero">
