--- a/series.html
+++ b/series.html
@@ -9,13 +9,18 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header-nav">Inicio</h1>
-        <a href="peliculas.html">
-        <img src="images/hulk_hero.png" alt="Hero image" class="hero-img">
-        </a>
+        <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
+        <nav>
+            <ul>
+            <li>HOME</li>
+            <li>PELÍCULAS</li>
+            <li>SERIES</li>
+            <li>PERFIL</li>
+        </ul>
+        </nav>
     </header>
     <main>
-        <nav class="nav">
+        <section class="filter-categoria">
             <li class="dropdown-container">
                 <a class="dropdown-link">
                     Seleccionar categoria
@@ -30,7 +35,7 @@
                 <input class="search" type="search" placeholder="Buscar por nombre">
                 <img src="images/search.png" alt="Buscar" class="search-icon">
             </li>
-        </nav>
+        </section>
         <h2 class="h2-destacados">Destacados</h2>
         <section class="content">
             <a href="info-series.html">
