--- a/peliculas.html
+++ b/peliculas.html
@@ -12,9 +12,9 @@
         <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
         <nav>
             <ul>
-            <li>HOME</li>
-            <li>PELÍCULAS</li>
-            <li>SERIES</li>
+            <li><a href="main.html">HOME</a></li>
+            <li class="activo"><a href="peliculas.html">PELÍCULAS</a></li>
+            <li><a href="series.html">SERIES</a></li>
             <li>PERFIL</li>
         </ul>
         </nav>
