--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <section class="alumnos">
             <ul>
                 <li>Sguerzo Felipe - 47061231</li>
