Arregle footer y main del index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </section>
         </form>
     </main>
-     <footer>
+     <footer class="footer-iniciar_sesion">
         <section class="alumnos">
             <ul>
                 <li>Sguerzo Felipe - 47061231</li>
