--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/headerYFooter.css">
+    <link rel="stylesheet" href="styles/headerYFooter.css"
 </head>
 <body>
     <header class="header">
         <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
-    </header>
+    </header> 
     <main>
         <form class="formtext">
             <section class="h1-title">
@@ -50,7 +50,7 @@
             </ul>
         </section>
 
-
+        <!--
         <section class="contenedor-redes">
             <a href="http://www.facebook.com" target="_blank">  
             <div class="icono facebook">
@@ -124,7 +124,7 @@
                         </svg>
                 </div>
                 </a>
-            </section>
+            </section> -->
     </footer>
 </body>
 </html>
