info pelicula mobile responsive

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximumscale=1">
     <title>Peliculas</title>
     <link rel="stylesheet" href="styles/headerYFooter.css" />
     <link rel="stylesheet" href="styles/info-pelicula.css" />
@@ -24,7 +24,6 @@
         </ul>
         </nav>
     </header>
-
     <section class="pelicula-hero">
       <img class="peli-bg" src="assets/EjemploPeli1.avif" alt="Pelicula 1" />
 
@@ -32,7 +31,7 @@
         <section class="detalles-container">
           <h1 class="pelicula-titulo">ROMPER EL CIRCULO</h1>
           <section class="genero">
-            <ul>
+            <ul class="genero-li">
               <li>13+</li>
               <li>2024</li>
               <li>DRAMA</li>
@@ -60,38 +59,30 @@
           <h1 class="recomendacion-titulo">Quizá también te guste</h1>
           <section class="similares">
             <section class="pelicula-similar">
-              <img
+              <img class="img-pelicula-similar"
                 src="assets/EjemploPeli1.avif"
                 alt="Pelicula Similar"
-                width="300"
-                height="200px"
               />
               <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
             </section>
             <section class="pelicula-similar">
-              <img
+              <img class="img-pelicula-similar"
                 src="assets/EjemploPeli1.avif"
                 alt="Pelicula Similar"
-                width="300"
-                height="200px"
               />
               <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
             </section>
             <section class="pelicula-similar">
-              <img
+              <img class="img-pelicula-similar"
                 src="assets/EjemploPeli1.avif"
                 alt="Pelicula Similar"
-                width="300"
-                height="200px"
               />
               <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
             </section>
             <section class="pelicula-similar">
-              <img
+              <img class="img-pelicula-similar"
                 src="assets/EjemploPeli1.avif"
                 alt="Pelicula Similar"
-                width="300"
-                height="200px"
               />
               <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
             </section>
