--- a/info-series.html
+++ b/info-series.html
@@ -10,9 +10,16 @@
 </head>
 
 <body>
-    <header>
-        <a href="index.html"><img src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp"
-                alt="HBO LOGO" /></a>
+    <header class="header">
+        <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
+        <nav>
+            <ul>
+            <li><a href="main.html">HOME</a></li>
+            <li><a href="peliculas.html">PELÍCULAS</a></li>
+            <li><a href="series.html">SERIES</a></li>
+            <li>PERFIL</li>
+        </ul>
+        </nav>
     </header>
 
     <section class="pelicula-hero">
