info series movil responsive

--- a/info-series.html
+++ b/info-series.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximumscale=1">
     <title>Better Call Saul</title>
     <link rel="stylesheet" href="./styles/info-series.css">
     <link rel="stylesheet" href="./styles/headerYFooter.css" />
@@ -46,7 +46,6 @@
                         Jimmy McGill en Saul Goodman, el asesor inescrupuloso de Walter White.
                     </p>
                 </section>
-
                 <a class="btn-verAhora" href="https://www.youtube.com/watch?v=kXiw_wEcUVQ&ab_channel=Wave427"
                     target="_blank"><button class="btn-comprar">Ver
                         ahora</button></a>
@@ -75,6 +74,38 @@
                     </select>
                 </form>
             </section>
+                <form class="temporada-capitulo-movil" action="get">
+                    <div class="verAhora-y-capitulo">
+                    <a class="btn-verAhora" href="https://www.youtube.com/watch?v=kXiw_wEcUVQ&ab_channel=Wave427" target="_blank">
+                        <button class="btn-comprar-movil">Verahora</button>
+                    </a>
+                    <select class="temporadas-movil" name="temporada" id="temporada">
+                        <option value="temporada1">Temporada 1</option>
+                        <option value="temporada2">Temporada 2</option>
+                        <option value="temporada3">Temporada 3</option>
+                        <option value="temporada4">Temporada 4</option>
+                        <option value="temporada5">Temporada 5</option>
+                        <option value="temporada6">Temporada 6</option>
+                    </select>
+
+                    <select class="capitulos-movil" name="capitulo" id="capitulo">
+                        <option value="capitulosTemporada1">Capitulo 1</option>
+                        <option value="capitulosTemporada1">Capitulo 2</option>
+                        <option value="capitulosTemporada1">Capitulo 3</option>
+                        <option value="capitulosTemporada1">Capitulo 4</option>
+                        <option value="capitulosTemporada1">Capitulo 5</option>
+                        <option value="capitulosTemporada1">Capitulo 6</option>
+                        <option value="capitulosTemporada1">Capitulo 7</option>
+                        <option value="capitulosTemporada1">Capitulo 8</option>
+                        <option value="capitulosTemporada1">Capitulo 9</option>
+                        <option value="capitulosTemporada1">Capitulo 10</option>
+                    </select>
+
+                    <section class="ifremaContenedor-movil">
+                        <iframe class="iframe-pelicula-movil" src="https://www.youtube.com/embed/Ylv21uNzW4k?si=MPPbtb2I7o3xOWAs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            </iframe>
+                    </div>
+                </form>
         </section>
 
         <section class="ifremaContenedor">
@@ -83,6 +114,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
+        </section>
         </section>
     </section>
 
