main cambio de nombre de categorias

--- a/main.html
+++ b/main.html
@@ -27,8 +27,9 @@
                     <img src="images/arrow.png" alt="Arrow" class="arrow">
                 </a>
                 <div class="dropdown-content">
-                    <a class="sub-link" href="peliculas.html">Peliculas</a>
-                    <a class="sub-link" href="series.html">Series</a>
+                    <a class="sub-link" href="main.html">Accion</a>
+                    <a class="sub-link" href="main.html">Comedia</a>
+                    <a class="sub-link" href="main.html">Drama</a>
                     <a class="sub-link" href="main.html">Ninguna</a>
             </li>    
             <li class="search-container">
