link en cada imagen de info-series e info-peliculas

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -59,32 +59,32 @@
           <h1 class="recomendacion-titulo">Quizá también te guste</h1>
           <section class="similares">
             <section class="pelicula-similar">
-              <img class="img-pelicula-similar"
-                src="assets/EjemploPeli1.avif"
-                alt="Pelicula Similar"
-              />
-              <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
+              <a href="./info-pelicula.html"><img class="img-pelicula-similar"
+                src="./images/hulk_hero.png"
+                alt="Hulk"
+              /></a>
+              <h3 class="titulo-pelicula_recomendada">Hulk</h3>
             </section>
             <section class="pelicula-similar">
-              <img class="img-pelicula-similar"
-                src="assets/EjemploPeli1.avif"
-                alt="Pelicula Similar"
-              />
-              <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
+              <a href="./info-pelicula.html"><img class="img-pelicula-similar"
+                src="./images/shaolin-soccer-mini.png"
+                alt="Shaolin Soccer"
+              /></a>
+              <h3 class="titulo-pelicula_recomendada">Shaolin Soccer</h3>
             </section>
             <section class="pelicula-similar">
-              <img class="img-pelicula-similar"
-                src="assets/EjemploPeli1.avif"
-                alt="Pelicula Similar"
-              />
-              <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
+              <a href="./info-pelicula.html"><img class="img-pelicula-similar"
+                src="./images/baila-vini_mini.png"
+                alt="Baila, Vini"
+              /></a>
+              <h3 class="titulo-pelicula_recomendada">Baila, Vini</h3>
             </section>
             <section class="pelicula-similar">
-              <img  class="img-pelicula-similar"
-                src="assets/EjemploPeli1.avif"
-                alt="Pelicula Similar"
-              />
-              <h3 class="titulo-pelicula_recomendada">Romper el circulo</h3>
+              <a href="./info-pelicula.html"><img  class="img-pelicula-similar"
+                src="./images/super-cool-mini.png"
+                alt="Super Cool"
+              /></a>
+              <h3 class="titulo-pelicula_recomendada">Super Cool</h3>
             </section>
           </section>
 
