--- a/info-series.html
+++ b/info-series.html
@@ -11,14 +11,15 @@
 
 <body>
     <header class="header">
-        <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
+        <a href="index.html"><img class="headerimg"
+                src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
         <nav>
             <ul>
-            <li><a href="main.html">HOME</a></li>
-            <li><a href="peliculas.html">PELÍCULAS</a></li>
-            <li><a href="series.html">SERIES</a></li>
-            <li>PERFIL</li>
-        </ul>
+                <li><a href="main.html">HOME</a></li>
+                <li><a href="peliculas.html">PELÍCULAS</a></li>
+                <li><a href="series.html">SERIES</a></li>
+                <li>PERFIL</li>
+            </ul>
         </nav>
     </header>
 
@@ -74,9 +75,10 @@
                     </select>
                 </form>
             </section>
-                <form class="temporada-capitulo-movil" action="get">
-                    <div class="verAhora-y-capitulo">
-                    <a class="btn-verAhora" href="https://www.youtube.com/watch?v=kXiw_wEcUVQ&ab_channel=Wave427" target="_blank">
+            <form class="temporada-capitulo-movil" action="get">
+                <div class="verAhora-y-capitulo">
+                    <a class="btn-verAhora" href="https://www.youtube.com/watch?v=kXiw_wEcUVQ&ab_channel=Wave427"
+                        target="_blank">
                         <button class="btn-comprar-movil">Verahora</button>
                     </a>
                     <select class="temporadas-movil" name="temporada" id="temporada">
@@ -102,10 +104,14 @@
                     </select>
 
                     <section class="ifremaContenedor-movil">
-                        <iframe class="iframe-pelicula-movil" src="https://www.youtube.com/embed/Ylv21uNzW4k?si=MPPbtb2I7o3xOWAs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-            </iframe>
-                    </div>
-                </form>
+                        <iframe class="iframe-pelicula-movil"
+                            src="https://www.youtube.com/embed/Ylv21uNzW4k?si=MPPbtb2I7o3xOWAs"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                        </iframe>
+                </div>
+            </form>
         </section>
 
         <section class="ifremaContenedor">
@@ -115,7 +121,6 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
         </section>
-        </section>
     </section>
 
     <main>
@@ -124,19 +129,19 @@
                 <h1 class="recomendacion-titulo">Quizá también te guste</h1>
                 <section class="similares">
                     <section class="pelicula-similar">
-                        <img src="./images/breaking-bad.jpg" alt="Pelicula Similar" />
+                        <a href="./info-series.html"><img src="./images/breaking-bad.jpg" alt="Breaking Bad" /></a>
                         <h3 class="titulo-pelicula_recomendada">Breaking Bad</h3>
                     </section>
                     <section class="pelicula-similar">
-                        <img src="./images/chernobyl.jpg" alt="Pelicula Similar" />
+                        <a href="./info-series.html"><img src="./images/chernobyl.jpg" alt="Chernobyl" /></a>
                         <h3 class="titulo-pelicula_recomendada">Chernobyl</h3>
                     </section>
                     <section class="pelicula-similar">
-                        <img src="./images/peaky-blinders.jpg" alt="Pelicula Similar" />
+                        <a href="./info-series.html"><img src="./images/peaky-blinders.jpg" alt="Peaky Blinders" /></a>
                         <h3 class="titulo-pelicula_recomendada">Peaky Blinders</h3>
                     </section>
                     <section class="pelicula-similar">
-                        <img src="./images/dexter.jpg" alt="Pelicula Similar" />
+                        <a href="./info-series.html"><img src="./images/dexter.jpg" alt="Dexter" /></a>
                         <h3 class="titulo-pelicula_recomendada">Dexter</h3>
                     </section>
                 </section>
