Agregue nombre completo y dni de beto en todos los footer

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -128,7 +128,7 @@
                 <li>Sguerzo Felipe - 47061231</li>
                 <li>Sanchez Axel - 45920006</li>
                 <li>Georgianulis Nicolás - 37036288</li>
-                <li>Beto </li>
+                <li>Vazquez Espindola Mario Alberto - 42471083</li>
             </ul>
         </section>
 
