actualizacion de header con perfil

--- a/info-series.html
+++ b/info-series.html
@@ -18,7 +18,7 @@
                 <li><a href="main.html">HOME</a></li>
                 <li><a href="peliculas.html">PELÍCULAS</a></li>
                 <li><a href="series.html">SERIES</a></li>
-                <li>PERFIL</li>
+                <li><a href="usuario.html">PERFIL</a></li>
             </ul>
         </nav>
     </header>
