--- a/usuario.html
+++ b/usuario.html
@@ -16,7 +16,7 @@
                 <li><a href="main.html">HOME</a></li>
                 <li><a href="peliculas.html">PELÍCULAS</a></li>
                 <li><a href="series.html">SERIES</a></li>
-                <li><a href="usuario.html">PERFIL</a></li>
+                <li class="activo"><a href="usuario.html">PERFIL</a></li>
             </ul>
         </nav>
     </header>
