--- a/register.html
+++ b/register.html
@@ -19,14 +19,6 @@
     <header class="header">
         <a href="index.html"><img class="headerimg"
                 src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
-        <nav>
-            <ul>
-                <li><a href="main.html">HOME</a></li>
-                <li><a href="peliculas.html">PELÍCULAS</a></li>
-                <li><a href="series.html">SERIES</a></li>
-                <li><a href="usuario.html">PERFIL</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main class="main">
@@ -97,10 +89,10 @@
                         <input class="radio" type="radio" name="metodoDePago" id="tarjetaDeDebitoOCredito" />
                         <input class="metodoDePago__tarjetaDeDebitoOCredito__numeroDeTarjeta" type="tel"
                             pattern="[0-9]{16}" name="tarjetaDeDebitoOCredito" id="tarjetaDeDebitoOCredito"
-                            placeholder="N&uacute;mero de tarjeta" required>
+                            placeholder="N&uacute;mero de tarjeta">
                         <input class="metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad" type="tel"
                             pattern="[0-9]{3}" name="codigoDeSeguridad" id="codigoDeSeguridad" placeholder="Clave"
-                            required>
+                            >
                     </article>
 
                     <article class="metodoDePago__transferenciaBancaria">
