main header responsive + boton de cerrar sesion

--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
                 <li><a href="peliculas.html">PELÍCULAS</a></li>
                 <li><a href="series.html">SERIES</a></li>
                 <li><a href="usuario.html">PERFIL</a></li>
+                <li><a href="index.html">CERRAR SESION</a></li>
             </ul>
         </nav>
     </header>
