--- a/usuario.html
+++ b/usuario.html
@@ -17,6 +17,7 @@
                 <li><a href="peliculas.html">PELÍCULAS</a></li>
                 <li><a href="series.html">SERIES</a></li>
                 <li class="activo"><a href="usuario.html">PERFIL</a></li>
+                <li><a href="index.html">CERRAR SESION</a></li>
             </ul>
         </nav>
     </header>
