--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
             <section class="planes">
                 <article class="planes__plan">
                     <h3 class="planes__plan__tipoDePlan">Plan Est&aacute;ndar</h3>
-                    <h3 class="planes__plan__precio">$7.290,00<span>/mes</span></h3>
+                    <h3 class="planes__plan__precio">$7.290,00<span class="mes">/mes</span></h3>
                     <ul>
                         <li>2 dispositivos a la vez</li>
                         <li>Resoluci&oacute;n Full HD</li>
@@ -40,7 +40,7 @@
 
                 <article class="planes__plan">
                     <h3 class="planes__plan__tipoDePlan">Plan Gold</h3>
-                    <h3 class="planes__plan__precio">$8.790,00<span>/mes</span></h3>
+                    <h3 class="planes__plan__precio">$8.790,00<span class="mes">/mes</span></h3>
                     <ul>
                         <li>2 dispositivos a la vez</li>
                         <li>Resoluci&oacute;n Full HD</li>
@@ -50,7 +50,7 @@
 
                 <article class="planes__plan">
                     <h3 class="planes__plan__tipoDePlan">Plan Platino</h3>
-                    <h3 class="planes__plan__precio">$10.990,00<span>/mes</span></h3>
+                    <h3 class="planes__plan__precio">$10.990,00<span class="mes">/mes</span></h3>
                     <ul>
                         <li>4 dispositivos a la vez</li>
                         <li>Resoluci&oacute;n Full HD y 4K Ultra HD</li>
