--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header">
-        <a href="index.html"><img class="headerimg"
+        <a class="enlace" href="index.html"><img class="headerimg"
                 src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
     </header>
 
